# google_adk

./: ARCHITECTURE_WALKTHROUGH.md  END_CONVERSATION_FEATURE.md  MESSAGE_RETRIEVAL.md  README.md  WHEN_IS_IT_CALLED.md  get_all_messages.py  package-lock.json  pyproject.toml
src/data/transcripts/: session_376b3b77-4225-4c31-a78e-1945814542c0_20251111T080254334583Z.txt  session_86f2b20a-1768-4ae4-a9e4-8883f12f9663_20251117T171939944344Z.txt  session_86f2b20a-1768-4ae4-a9e4-8883f12f9663_20251117T180931192582Z.txt  session_86f2b20a-1768-4ae4-a9e4-8883f12f9663_20251117T180937364505Z.txt  session_cd0ef4d1-bff1-4303-8472-f108336cf421_20251117T070526806057Z.txt  session_cd0ef4d1-bff1-4303-8472-f108336cf421_20251117T070607485225Z.txt  session_dc3e7088-3212-40db-8009-b7ebf495ef4b_20251118T221813565799Z.txt  session_dc3e7088-3212-40db-8009-b7ebf495ef4b_20251118T221850569633Z.txt  session_dc3e7088-3212-40db-8009-b7ebf495ef4b_20251118T221927664360Z.txt  session_dc3e7088-3212-40db-8009-b7ebf495ef4b_20251118T222228076821Z.txt  session_dc3e7088-3212-40db-8009-b7ebf495ef4b_20251118T222407651303Z.txt
src/patientadvocacy/: __init__.py  app.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  index.css
